--- a/css/styles.css
+++ b/css/styles.css
@@ -2457,12 +2457,12 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #f4623a;
+  background-color: #041031;
   border-color: #f4623a;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #f24516;
+  background-color: #030b22;
   border-color: #ee3e0d;
 }
 .btn-primary:focus, .btn-primary.focus {
@@ -6067,7 +6067,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #101c49 !important;
+  background-color: #041031 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -9959,7 +9959,7 @@ html {
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
-  border-color: #f4623a;
+  border-color: #FFFFFF;
 }
 
 hr.light {
@@ -10048,7 +10048,7 @@ hr.light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/truck-bg.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 100%), url("../assets/img/truck-bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
