--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2817,7 +2817,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
+			background-color: #C7001C;
 			color: #c8ece9;
 		}
 
