--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3886,7 +3886,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 6em 0 4em 0 ;
-		background-color: #1d242a;
+		background-color: #002e59;
 		text-align: center;
 	}
 
